<resources>
    <string name="app_name">LaureApp</string>
    <string name="home_button_text">Home</string>
    <string name="star_button_text">Favorites</string>
    <string name="chat_button_text">Messages</string>
    <string name="list_button_text">Your Theses</string>
    <string name="all_thesis_button">FIND A THESIS</string>
    <string name="your_thesis_button">YOUR THESIS</string>
    <string name="add_thesis_button">NEW THESIS</string>
    <string name="handle_thesis_button">HANDLE THESIS</string>
    <string name="receipts_button">RECEIPTS</string>
    <string name="requests_button">YOUR REQUESTS</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_language">Language</string>
    <string name="menu_logout">Logout</string>
    <string name="guest_login">Go to login</string>
    <string name="name_profile">Name:</string>
    <string name="guest_account">Guest Account</string>
    <string name="profile_img">Profile Image</string>
    <string name="user_profession">Profession</string>
    <string name="homeToolbar">Home</string>
    <string name="createThesisToolbar">Create Thesis</string>
    <string name="favoritesToolbar">Favorite Theses</string>
    <string name="profileToolbar">Profile</string>
    <string name="thesisListToolbar">Handle Thesis</string>
    <string name="messagesToolbar">Messages</string>
    <string name="languagesToolbar">Languages</string>
    <string name="chatToolbar">Chat</string>
    <string name="settingsToolbar">Settings</string>
    <string name="editThesisToolbar">Edit Thesis</string>
    <string name="delete">Delete</string>
    <string name="delete_material">Delete Material</string>
    <string name="edit">Edit</string>
    <string name="newTaskToolbar">New Task</string>
    <string name="taskListToolbar">Task List</string>
    <string name="editTaskToolbar">Edit Task</string>
    <string name="newReceiptToolbar">New Receipt</string>
    <string name="availableThesisTooolbar">Available Thesis</string>
    <string name="thesisRequestTooolbar">Thesis Request</string>
    <string name="thesisContactTooolbar">Contact Professor</string>
    <string name="messages">Messages</string>
    <string name="messageContactTooolbar">Messages List</string>
    <string name="thesisInfoTooolbar">Thesis Info</string>
    <string name="email">Email</string>
    <string name="email_profile">Email:</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="proceed_with_sign_up">Proceed with sign up:</string>
    <string name="professor">Professor</string>
    <string name="student">Student:</string>
    <string name="studentProfession">Student</string>
    <string name="faculty">Faculty:</string>
    <string name="proceed_with_sign_up_as_a_professor">Proceed with sign up as a professor</string>
    <string name="proceed_with_sign_up_as_a_student">Proceed with sign up as a student</string>
    <string name="error_guest">This feature is only available to registered students</string>
    <string name="drag_info">Press and hold on a thesis to be able to swap it.</string>
    <string name="complete_registration">Complete registration</string>
    <string name="matriculation_number">Badge number:</string>
    <string name="testimage">testImage</string>
    <string name="select_faculty">Select faculty</string>
    <string name="select_role">select role</string>
    <string name="or">or</string>
    <string-array name="faculty_array">
        <item>Biologia</item>
        <item>Chimica</item>
        <item>Economia</item>
        <item>Farmacia</item>
        <item>Filosofia</item>
        <item>Giurisprudenza</item>
        <item>Informatica</item>
        <item>I.T.P.S.</item>
        <item>Lettere</item>
        <item>Matematica</item>
        <item>Medicina</item>
        <item>Scienze della Formazione</item>
        <item>Scienze Agro-Ambientali e Territoriali</item>
        <item>Scienze Biomediche</item>
        <item>Scienze Politiche</item>
    </string-array>
    <string name="thesis_name">Thesis name</string>
    <string name="type_name_of_thesis">Type thesis name</string>
    <string name="experimental">Experimental</string>
    <string name="drafted">Drafted</string>
    <string name="main_subject">Main subject</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="create_thesis">create thesis</string>
    <string name="related_projects">Related projects:</string>
    <string name="thesis_constraints">Thesis constraints</string>
    <string name="add_material">Add material (PDF only)</string>
    <string name="teaching_materials">Teaching materials</string>
    <string name="thesis_description">Thesis description</string>
    <string name="co_rapporteur">Co-rapporteur</string>
    <string name="days">days</string>
    <string name="type_thesis_constraints">type thesis constraints (if there are)</string>
    <string name="type_description_thesis">Type thesis description</string>
    <string name="type_main_subject">type main subject</string>
    <string name="type_related_projects">Type related projects (if any)</string>
    <string name="type_correlator">type correlator</string>
    <string name="save_thesis">Save</string>
    <string name="splash_image">Splash Image</string>
    <string name="receipt">Receipts</string>
    <string name="info_button">Info Button</string>
    <string name="email_already_existent">Email already existent, retry!</string>
    <string name="select_date">select date</string>
    <string name="select_start_time">select start time</string>
    <string name="select_end_time">select end time</string>
    <string name="change_lang">Change language:</string>
    <string name="thesis_type">Thesis type:</string>
    <string name="department">Department:</string>
    <string name="correlator">Correlator:</string>
    <string name="description">Description:</string>
    <string name="average_marks">Average Marks:</string>
    <string name="required_exams">Required Exams:</string>
    <string name="materials">Materials:</string>
    <string name="button_add_material">upload</string>
    <string name="nome_file">File name</string>
    <string name="department_of_affiliation">Department of affiliation</string>
    <string name="account_deleted">Account deleted</string>
    <string name="continua_la_registrazione">Continue the registration </string>
    <string name="data">Date</string>
    <string name="orario">Time</string>
    <string name="note">Notes</string>
    <string name="aggiungi">Add</string>
    <string name="name">Name</string>
    <string name="delete_profile">Delete profile</string>
    <string name="task_name">Task name</string>
    <string name="task_description">Task description</string>
    <string name="non_iniziato">Not started</string>
    <string name="completato">Completed</string>
    <string name="in_corso">Current</string>
    <string name="add_task">ADD TASK</string>
    <string name="task">Tasks</string>
    <string name="we_are_sorry_to_see_you_leave">We are sorry to see you leave</string>
    <string name="you_are_always_welocome_to_join_laureapp_again">You are always welocome to join LaureApp again!</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="no_internet_connection_first_message">Looks like you don\'t have an internet connection.</string>
    <string name="no_internet_connection_second_message">Connect to the internet and try again.</string>
    <string name="back_to_login">Back to login</string>
    <string name="requirement_met">Requirement met:</string>
    <string name="qr_code_thesis">qr_code_thesis</string>
    <string name="share_thesis_info">SHARE INFO</string>
    <string name="close">CLOSE</string>
    <string name="close_app">CLOSE APP</string>
    <string name="reload_app">RELOAD</string>
    <string name="pdf_title">UNIBA - Summary thesis document</string>
    <string name="hint_average_marks">Type average marks</string>
    <string name="hint_required_exams">Type required exams</string>
    <string name="toast_thesis_created">Thesis created</string>
    <string name="alertdialog_title">Share thesis information</string>
    <string name="dialogalert_qr_subtitle">Scan me with LaureApp!</string>
    <string name="request_thesis">Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="question_register_activity">Are you a student or a professor?</string>
    <string name="thesis_name_card">Thesis name</string>
    <string name="nome_file_card">file\'s name</string>
    <string name="object_message">Object:</string>
    <string name="student_message">Student:</string>
    <string name="date_message">Date:</string>
    <string name="state_message">State:</string>
    <string name="sharebutton_card">Share_button</string>
    <string name="receipt_date">Date:</string>
    <string name="receipt_date_txt">ReceiptDate</string>
    <string name="receipt_starting_time">Start time:</string>
    <string name="receipt_starting_time_txt">startTime</string>
    <string name="receipt_ending_time">End Time:</string>
    <string name="receipt_ending_time_txt">endTime</string>
    <string name="receipt_tasks_handled">Tasks handled:</string>
    <string name="receipt_tasks_lis">taskList</string>
    <string name="receipt_description">Description:</string>
    <string name="receipt_description_txt">description</string>
    <string name="thesis">Thesis:</string>
    <string name="thesisname">thesisName</string>
    <string name="student_request">Student:</string>
    <string name="studentemail">studentEmail</string>
    <string name="professor_message">Professor:</string>
    <string name="task_name_card">Task name</string>
    <string name="task_state">Task state:</string>
    <string name="task_description_card">Description:</string>
    <string name="task_name_edit">Task name</string>
    <string name="thesis_name_edit">Thesis:</string>
    <string name="student_edit_task">Student:</string>
    <string name="description_edit_task">Description:</string>
    <string name="task_state_edit">Task state:</string>
    <string name="started_task">Started</string>
    <string name="completed_task">Completed</string>
    <string name="not_started_task">Not Started</string>
    <string name="student_edit_thesis">Student:</string>
    <string name="object_info_message">Object:</string>
    <string name="student_info_message">Student message:</string>
    <string name="professor_info_message">Professor answer:</string>
    <string name="professor_info_message_student">Professor:</string>
    <string name="nomeprof">profName</string>
    <string name="thesis_info_message_student">Thesis:</string>
    <string name="thesisName_info_message_student">thesisName</string>
    <string name="new_message_info_message_student">New Message</string>
    <string name="state">State:</string>
    <string name="message">Message</string>
    <string name="delete_request">Delete Request</string>
    <string name="no_thesis_yet">You have not requested any thesis</string>
    <string name="insert_description">insert description</string>
    <string name="addressed_tasks">Addressed tasks:</string>
    <string name="student_name_"> studentName</string>
    <string name="thesis_name_"> thesis_name</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="message_list">message list</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="close_button"><u>CLOSE</u></string>
</resources>