<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/SimpleBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/alertdialog_title" />

    <ImageView
        android:id="@+id/qr_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/qr_code_thesis" />

    <TextView
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialogalert_qr_subtitle"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        style="@style/SimpleText"/>

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/share_thesis_info"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/transparent"
        android:text="@string/close_button"
        android:textColor="@color/black"
        android:textSize="16sp" />


</LinearLayout>