<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/studInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A023FA6"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtProfessor"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cardo"
                android:gravity="end"
                android:text="@string/student"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtNomeStudente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/cardo"
                android:text="@string/student_name_"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="4sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cardo"
                android:gravity="end"
                android:text="@string/thesis"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtNomeTesi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/cardo"
                android:text="@string/thesis_name_"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="4sp"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/studInfo"
        android:layout_above="@+id/addTaskButton"
        android:background="#0808275A"
        android:contentDescription="@string/message_list">

        <LinearLayout
            android:id="@+id/taskListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".professor.ReceiptsListFragment">

            <TextView
                android:id="@+id/noTasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tasks_yet"
                android:textSize="25sp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cardo"
        android:text="@string/newTaskToolbar"
        android:textSize="20sp"
        android:padding="10dp"/>
</RelativeLayout>