<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/studInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A023FA6"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtProf"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="end"
                android:text="@string/professor_info_message_student"
                android:textColor="@color/black"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/txtNomeProfessore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_light"
                android:text="@string/nomeprof"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="4sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:gravity="end"
                android:text="@string/thesis_info_message_student"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />


            <TextView
                android:id="@+id/txtNomeTesi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/thesisName_info_message_student"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="4sp"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/addMessageButton"
        android:layout_below="@+id/studInfo"
        android:background="#0808275A"
        android:contentDescription="@string/message_list">

        <LinearLayout
            android:id="@+id/messageListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addMessageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="10dp"
        android:fontFamily="@font/roboto_medium"
        app:icon="@drawable/icon_plus"
        app:iconSize="20sp"
        app:iconGravity="textStart"
        android:text="@string/new_message_info_message_student" />

</RelativeLayout>